--- a/A4/code/public/index.html
+++ b/A4/code/public/index.html
@@ -5,8 +5,8 @@
 
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-    <meta name="description" content="">
-    <meta name="author" content="">
+    <meta name="description" content="Resume">
+    <meta name="author" content="Jacob Melendrez">
 
     <title>Resume - Start Bootstrap Theme</title>
 
@@ -66,12 +66,16 @@
       <section class="resume-section p-3 p-lg-5 d-flex d-column" id="about">
         <div class="my-auto">
           <h1 class="mb-0">AME
-            <span class="text-primary">470-570</span>
+            <span class="text-primary">Jacob Melendrez</span>
           </h1>
           <div class="subheading mb-5">3542 Berry Street · Cheyenne Wells, CO 80810 · (317) 585-8468 ·
-            <a href="mailto:name@email.com">name@email.com</a>
+            <a href="mailto:jcmelend@asu.edu">jcmelend@asu.edu</a>
           </div>
-          <p class="mb-5">I am experienced in leveraging agile frameworks to provide a robust synopsis for high level overviews. Iterative approaches to corporate strategy foster collaborative thinking to further the overall value proposition.</p>
+          <p class="mb-5">Programming Language: Java, JavaScript, Python, C, Arduino, SQL, NoSQL</P>
+            <P>Markup Language: HTML, CSS, PHP</P>
+            <p>Office Manage: Excel, Word, PowerPoint, Access.</P>
+            <p>Social Media: Facebook, LinkedIn, Handshake
+            </p>
           <ul class="list-inline list-social-icons mb-0">
             <li class="list-inline-item">
               <a href="#">
