--- a/A7/code/public/index.html
+++ b/A7/code/public/index.html
@@ -442,7 +442,7 @@ var doLogout = function()
                   '
                   > 
               </a>
-              <a id='editButton' class="waves-effect waves-light btn blue" style='position:fixed;bottom:0;left:40%;width:100px;' href='javascript:editImage()'><i style='margin-right:0' class="material-icons left">arrow_left</i>Edit</a>
+              <a id='editButton' class="waves-effect waves-light btn blue" style='position:fixed;bottom:0;left:70%;width:100px;' href='javascript:editImage()'>Edit</a>
               <a id="deleteButton" class="waves-effect waves-light btn red" style="position:fixed;bottom:0;right:0;width:100px;" href="javascript:deleteImage()">Delete</a>
 
         </div>
